--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -9,6 +9,6 @@ jobs:
   hello-job:
     runs-on: ubuntu-latest
     steps:
-    - Echo text
-      run: echo "Hello, world!"
+      - name: Echo text
+        run: echo "Hello, world!"
 
